--- a/navegacion/formularioRegistro.html
+++ b/navegacion/formularioRegistro.html
@@ -12,7 +12,7 @@
    <div class="contenedor">
      <header>
            <div class="titulo">
-               <img src="../img/the-pits.jpg" width="150px" height="100px" alt="">
+               <img src="../img/the-pits.jpg" width="150px"  alt="">
            </div>
        </header>
        <div class="contenido">
