--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                <div class="ing">
              <form action="php/ingreso.php" method="post">
                <div class="input1">
-               <input type="text" placeholder="Email" name="email" id="m">
-               <input type="password" placeholder="Contraseña" name="contrasena" id="c">   
+               <input type="text" placeholder="Email" name="email" id="m" required>
+               <input type="password" placeholder="Contraseña" name="contrasena" id="c" required>   
                </div>
                <br><br>
                <div class="input2">
