--- a/navegacion/entrada.html
+++ b/navegacion/entrada.html
@@ -44,7 +44,7 @@
            <div class="ingredientes">
                <div class="opcion" id="opcion1">
                    <h4>Arepa</h4>
-                   <a href="ingredientes.html">
+                   <a href="ingredientes2.html">
                    <div>
                    <img src="../img/img_arepas_de_fibra_58300_600.jpg" alt="" width="100%" height="100%"> 
                    </div>
@@ -52,7 +52,7 @@
                    </div>
                <div class="opcion" id="opcion2">
                   <h4>Desgranado</h4>
-                  <a href="ingredientes.html">
+                  <a href="ingredientes2.html">
                   <div>
                   <img src="../img/desgranado_con_adiciones_0.jpg" alt="" width="100%" height="100%"> 
                   </div>
